[package]
name = "ironclaw_common"
version = "0.5.0"
edition = "2024"
rust-version.workspace = true
description = "Shared types, paths, and platform helpers used across the IronClaw workspace"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"

[package.metadata.ironclaw]
layer = "contracts"

[package.metadata.dist]
dist = false

[dependencies]
base64 = "0.22"
chrono-tz = "0.10"
dirs = "6"
hex = "0.4"
rand = "0.10"
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
