[package]
name = "ironclaw_event_streams"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Transport-neutral Reborn projection stream manager"
publish = false

[dependencies]
async-trait = "0.1"
ironclaw_event_projections = { path = "../ironclaw_event_projections" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_outbound = { path = "../ironclaw_outbound" }
ironclaw_turns = { path = "../ironclaw_turns" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ironclaw_events = { path = "../ironclaw_events" }
tokio = { version = "1", features = ["macros", "rt", "time"] }
