[package]
name = "ironclaw_event_streams"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Transport-neutral Reborn projection stream manager"
publish = false

[package.metadata.ironclaw]
layer = "substrates"

[dependencies]
async-trait = "0.1"
ironclaw_event_projections = { path = "../ironclaw_event_projections" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_outbound = { path = "../ironclaw_outbound" }
ironclaw_turns = { path = "../ironclaw_turns" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "rt"] }

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ironclaw_events = { path = "../ironclaw_events" }
# FaultInjecting decorator: test store fault paths through the real store
ironclaw_filesystem = { path = "../ironclaw_filesystem", features = ["test-support"] }
# Enables the in-memory-backed outbound-state store constructor for tests only.
ironclaw_outbound = { path = "../ironclaw_outbound", features = ["test-support"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
