[package]
name = "ironclaw_extension_host"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Generic extension lifecycle host, active snapshot, loaders, and resolvers for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[package.metadata.ironclaw]
layer = "products"

[features]
# Lightweight in-crate test fakes (fixtures, scripted adapters) reused by
# downstream integration tests. Zero-byte in production.
test-support = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
ironclaw_auth = { path = "../ironclaw_auth" }
ironclaw_dispatcher = { path = "../ironclaw_dispatcher" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_extensions = { path = "../ironclaw_extensions" }
ironclaw_product_adapters = { path = "../ironclaw_product_adapters" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[[test]]
name = "lifecycle_contract"
required-features = ["test-support"]
